--- a/src/ArtistHomePage.css
+++ b/src/ArtistHomePage.css
@@ -626,6 +626,130 @@ body {
     }
 }
 
+/* Basic Styling for Dialogs and Inputs */
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modal{
+    background-color: #fff;
+    padding: 20px;
+    width: 400px;
+    max-height: 80%;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    color: #000;
+}
+
+.terms-link {
+    color: #007BFF;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+    .terms-link:hover {
+        color: #0056b3;
+    }
+
+.terms-modal {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 400px;
+    max-height: 80%;
+    overflow: hidden;
+    text-align: center;
+}
+
+.terms-content {
+    max-height: 200px;
+    overflow-y: auto;
+    margin-bottom: 20px;
+    text-align: left;
+    padding-right: 10px;
+    color: #007BFF; /* Link color */
+}
+
+.terms-checkbox-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #000;
+}
+
+    .terms-checkbox-container.disabled input {
+        pointer-events: none;
+    }
+
+.terms-footer {
+    margin-top: 20px;
+}
+
+
+.email-input {
+    width: 100%;
+    padding: 0.8rem;
+    margin: 1rem 0;
+    font-size: 1rem;
+    background-color: white;
+    color: black;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: border-color 0.3s ease;
+}
+
+    .email-input:focus {
+        border-color: #ffa94d;
+        outline: none;
+    }
+
+/* Submit Button Styling */
+.modal-next {
+    background-color: #ffa94d;
+    color: white;
+    padding: 0.6rem 1.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+    .modal-next:hover {
+        background-color: #ffd1a1;
+        color: #ff6f61;
+    }
+
+.modal-close:hover {
+    background-color: #e0e0e0;
+}
+
+.modal-close {
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 0.6rem 1.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.forgot-password-dialog .email-input {
+    color: black;
+}
+
+.error-text {
+    color: red;
+}
+
+
 /* Mobile Styles */
 @media (max-width: 768px) {
 
